<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_item_edition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UI.AddTraining">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblNombre"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edNombre"
            android:layout_weight="1"
            android:hint="@string/pistaNombre"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/tiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTiempo"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edTiempo"
            android:layout_weight="1"
            android:hint="@string/pistaNombre"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblDistancia"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edDistancia"
            android:layout_weight="1"
            android:hint="@string/pistaNombre"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:gravity="right|center_vertical">


        <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelar"
            android:layout_weight="1" />

        <Button
            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guardar"
            android:layout_weight="1" />


    </LinearLayout>

</LinearLayout>