<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvItems"
            android:layout_weight="0.8"
            android:choiceMode="singleChoice"
            android:layout_marginLeft="@dimen/ListViewMargins"
            android:layout_marginRight="@dimen/ListViewMargins"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/LinearTop"
            android:layout_weight="0.2"
            android:gravity="bottom"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/swim"
                android:text="@string/Plus"
                app:backgroundTint="@color/blue" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:src="@drawable/progress_check"
                android:text="@string/Stats"
                app:backgroundTint="@color/blue"
                app:fabSize="auto" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|right"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/lblFxNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:gravity="center_vertical|right"
                    android:text="@string/num"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginLeft="@dimen/textVLeftM"
                    android:layout_marginRight="@dimen/textVRightM"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical|right"
                    android:text="@string/cero"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>